{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 137,
  "lineage": "3146865e-da02-82ce-5dfe-4ed711f931c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DIYCDN_POP_dublin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ac5a9b225e99b02",
            "arn": "arn:aws:ec2:eu-west-2:878760020695:instance/i-0a2017ec11f2c7edc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2017ec11f2c7edc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "cdn-pop-eu-west-2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07146a9fe6ddab9c8",
            "private_dns": "ip-192-168-0-183.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.183",
            "public_dns": "ec2-35-178-201-16.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.201.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073d71ef5c9fa4265",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef83416dfc8c173c",
            "tags": {
              "Env": "test",
              "Name": "cdn-pop-dublin",
              "Region": "dublin"
            },
            "tags_all": {
              "Env": "test",
              "Name": "cdn-pop-dublin",
              "Region": "dublin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9d9471e1cdd44c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.cdn-pop-pub-key-pair",
            "aws_security_group.DIYCDN_POP_sg",
            "aws_subnet.dublin-public-subnet",
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ac5a9b225e99b02",
            "arn": "arn:aws:ec2:eu-west-2:878760020695:instance/i-0b72ff8797890fbcb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b72ff8797890fbcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "cdn-pop-eu-west-2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ee8f71d61de536c",
            "private_dns": "ip-192-168-0-121.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.121",
            "public_dns": "ec2-18-134-228-180.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.228.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ecf18cc029e40d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef83416dfc8c173c",
            "tags": {
              "Env": "test",
              "Name": "cdn-pop-dublin",
              "Region": "dublin"
            },
            "tags_all": {
              "Env": "test",
              "Name": "cdn-pop-dublin",
              "Region": "dublin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9d9471e1cdd44c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.cdn-pop-pub-key-pair",
            "aws_security_group.DIYCDN_POP_sg",
            "aws_subnet.dublin-public-subnet",
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DIYCDN_POP_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878760020695:internet-gateway/igw-0858474a2920f24e2",
            "id": "igw-0858474a2920f24e2",
            "owner_id": "878760020695",
            "tags": {
              "Environment": "DIYCDN_POP_vpc"
            },
            "tags_all": {
              "Environment": "DIYCDN_POP_vpc"
            },
            "vpc_id": "vpc-0893ff86419e4b6ac"
          },
          "dependencies": [
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DIYCDN_POP_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878760020695:route-table/rtb-05925afc20e60f8f2",
            "id": "rtb-05925afc20e60f8f2",
            "owner_id": "878760020695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0858474a2920f24e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DIYCDN_POP_route_public"
            },
            "tags_all": {
              "Name": "DIYCDN_POP_route_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0893ff86419e4b6ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DIYCDN_POP_igw",
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DIYCDN_POP_route_assoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d2cf7d87253c6ac",
            "route_table_id": "rtb-05925afc20e60f8f2",
            "subnet_id": "subnet-0ef83416dfc8c173c"
          },
          "dependencies": [
            "aws_internet_gateway.DIYCDN_POP_igw",
            "aws_route_table.DIYCDN_POP_route_public",
            "aws_subnet.dublin-public-subnet",
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DIYCDN_POP_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878760020695:security-group/sg-0e9d9471e1cdd44c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9d9471e1cdd44c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "terraform-20220817123550818900000001",
            "name_prefix": "terraform-",
            "owner_id": "878760020695",
            "revoke_rules_on_delete": false,
            "tags": {
              "API": "Allowed",
              "HTTP": "Allowed",
              "SSH": "Allowed"
            },
            "tags_all": {
              "API": "Allowed",
              "HTTP": "Allowed",
              "SSH": "Allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0893ff86419e4b6ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dublin-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878760020695:subnet/subnet-0ef83416dfc8c173c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef83416dfc8c173c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878760020695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dublin-public-subnet"
            },
            "tags_all": {
              "Name": "dublin-public-subnet"
            },
            "vpc_id": "vpc-0893ff86419e4b6ac"
          },
          "dependencies": [
            "aws_vpc.DIYCDN_POP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DIYCDN_POP_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878760020695:vpc/vpc-0893ff86419e4b6ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04d04e58e38352ec5",
            "default_route_table_id": "rtb-0d63c1297a6693191",
            "default_security_group_id": "sg-091afa74cf40561c0",
            "dhcp_options_id": "dopt-f10eed98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0893ff86419e4b6ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d63c1297a6693191",
            "owner_id": "878760020695",
            "tags": {
              "Name": "DIYCDN_POP_vpc"
            },
            "tags_all": {
              "Name": "DIYCDN_POP_vpc"
            }
          }
        }
      ]
    }
  ]
}